--- a/sprouts/Base.lproj/Main.storyboard
+++ b/sprouts/Base.lproj/Main.storyboard
@@ -1,13 +1,90 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
+        <scene sceneID="dbo-eI-gbq">
+            <objects>
+                <viewController id="616-ji-UpF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="wTa-rh-B9Y"/>
+                        <viewControllerLayoutGuide type="bottom" id="YMs-Tk-SfT"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pS3-ak-kzK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dSf-kO-k2r">
+                                <rect key="frame" x="0.0" y="540" width="600" height="60"/>
+                                <color key="backgroundColor" red="0.23921568630000001" green="0.43921568630000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="XLu-8t-uUj"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="cfn-I8-MDN" kind="unwind" identifier="backToMainMenu" unwindAction="returnToMainMenu:" id="T2G-iZ-Ox1"/>
+                                </connections>
+                            </button>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Vm3-da-toZ">
+                                <rect key="frame" x="0.0" y="20" width="600" height="520"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hH1-eu-qx3">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="xTx-k7-QG4">
+                                        <rect key="frame" x="10" y="10" width="200" height="200"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OMt-Mm-lLQ">
+                                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="OMt-Mm-lLQ" secondAttribute="bottom" id="YLA-go-cvy"/>
+                                            <constraint firstItem="OMt-Mm-lLQ" firstAttribute="leading" secondItem="xTx-k7-QG4" secondAttribute="leading" id="cxW-0r-jcE"/>
+                                            <constraint firstItem="OMt-Mm-lLQ" firstAttribute="top" secondItem="xTx-k7-QG4" secondAttribute="top" id="fja-MR-XLA"/>
+                                            <constraint firstAttribute="trailing" secondItem="OMt-Mm-lLQ" secondAttribute="trailing" id="ubH-Hm-Vqv"/>
+                                        </constraints>
+                                        <size key="customSize" width="200" height="200"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Vm3-da-toZ" firstAttribute="top" secondItem="wTa-rh-B9Y" secondAttribute="bottom" id="5Hs-he-ORU"/>
+                            <constraint firstAttribute="trailing" secondItem="Vm3-da-toZ" secondAttribute="trailing" id="AhJ-IS-alN"/>
+                            <constraint firstItem="dSf-kO-k2r" firstAttribute="leading" secondItem="pS3-ak-kzK" secondAttribute="leading" id="HQM-mv-Ydb"/>
+                            <constraint firstItem="Vm3-da-toZ" firstAttribute="leading" secondItem="pS3-ak-kzK" secondAttribute="leading" id="Wj3-om-vbX"/>
+                            <constraint firstAttribute="trailing" secondItem="dSf-kO-k2r" secondAttribute="trailing" id="aR5-T0-MBZ"/>
+                            <constraint firstItem="dSf-kO-k2r" firstAttribute="top" secondItem="Vm3-da-toZ" secondAttribute="bottom" id="dac-eQ-DpH"/>
+                            <constraint firstItem="YMs-Tk-SfT" firstAttribute="top" secondItem="dSf-kO-k2r" secondAttribute="bottom" id="eeQ-SD-qvX"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gOD-78-565" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="cfn-I8-MDN" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="-302"/>
+        </scene>
+        <!--Main View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="sprouts" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +92,87 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aTR-be-mcf">
+                                <rect key="frame" x="30" y="495" width="540" height="55"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
+                                <state key="normal" title="I just ate some sprouts">
+                                    <color key="titleColor" red="0.23921568630000001" green="0.43921568630000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="tkR-mM-a9o" kind="presentation" identifier="iAteSprouts" id="7vl-HY-Jxf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vba-Tx-y9o">
+                                <rect key="frame" x="30" y="70" width="540" height="55"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
+                                <state key="normal" title="I want some sprouts">
+                                    <color key="titleColor" red="0.23921568630000001" green="0.43921568630000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <segue destination="616-ji-UpF" kind="presentation" identifier="iWantSprouts" id="17g-MQ-5YR"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aTR-be-mcf" secondAttribute="trailing" constant="30" id="7QM-NI-vXn"/>
+                            <constraint firstItem="Vba-Tx-y9o" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="D6R-LU-Noh"/>
+                            <constraint firstAttribute="trailing" secondItem="Vba-Tx-y9o" secondAttribute="trailing" constant="30" id="PMu-eb-JDB"/>
+                            <constraint firstItem="aTR-be-mcf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="gtH-8w-psP"/>
+                            <constraint firstItem="Vba-Tx-y9o" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="rAO-mw-iJo"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aTR-be-mcf" secondAttribute="bottom" constant="50" id="zUS-PX-Ite"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="iAteSproutsButton" destination="aTR-be-mcf" id="kUm-Ep-oFt"/>
+                        <outlet property="iWantSproutsButton" destination="Vba-Tx-y9o" id="Rkz-SV-MY2"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="305" y="387"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Kf6-ZL-brr">
+            <objects>
+                <viewController id="tkR-mM-a9o" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="F0f-zn-76x"/>
+                        <viewControllerLayoutGuide type="bottom" id="Q9T-5u-xhe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Fy6-O5-8wB">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DPy-N5-DJn">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="60"/>
+                                <color key="backgroundColor" red="0.23921568630000001" green="0.43921568630000002" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="kHL-ZW-iax"/>
+                                    <constraint firstAttribute="height" constant="60" id="yic-bI-dFk"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
+                                <state key="normal" title="Back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="dLe-YZ-Arg" kind="unwind" identifier="backToMainMenu" unwindAction="returnToMainMenu:" id="1HD-LV-Ght"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="DPy-N5-DJn" secondAttribute="trailing" id="1Ih-iE-ymD"/>
+                            <constraint firstItem="DPy-N5-DJn" firstAttribute="top" secondItem="Fy6-O5-8wB" secondAttribute="top" id="7g5-OL-2if"/>
+                            <constraint firstItem="DPy-N5-DJn" firstAttribute="leading" secondItem="Fy6-O5-8wB" secondAttribute="leading" id="hSX-di-n4J"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sem-0V-UY0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="dLe-YZ-Arg" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="305" y="1209"/>
         </scene>
     </scenes>
 </document>
