--- a/sprouts/Base.lproj/Main.storyboard
+++ b/sprouts/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Want Sprouts View Controller-->
         <scene sceneID="dbo-eI-gbq">
             <objects>
-                <viewController id="616-ji-UpF" sceneMemberID="viewController">
+                <viewController id="616-ji-UpF" customClass="IWantSproutsViewController" customModule="sprouts" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wTa-rh-B9Y"/>
                         <viewControllerLayoutGuide type="bottom" id="YMs-Tk-SfT"/>
@@ -33,6 +33,7 @@
                             </button>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Vm3-da-toZ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="520"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hH1-eu-qx3">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -40,7 +41,7 @@
                                     <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="xTx-k7-QG4">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCell" id="xTx-k7-QG4" customClass="ItemCell" customModule="sprouts" customModuleProvider="target">
                                         <rect key="frame" x="10" y="10" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -60,8 +61,15 @@
                                             <constraint firstAttribute="trailing" secondItem="OMt-Mm-lLQ" secondAttribute="trailing" id="ubH-Hm-Vqv"/>
                                         </constraints>
                                         <size key="customSize" width="200" height="200"/>
+                                        <connections>
+                                            <outlet property="itemImage" destination="OMt-Mm-lLQ" id="MNn-vr-PvR"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="616-ji-UpF" id="ab5-Op-kI9"/>
+                                    <outlet property="delegate" destination="616-ji-UpF" id="lAI-ob-Hym"/>
+                                </connections>
                             </collectionView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -75,6 +83,9 @@
                             <constraint firstItem="YMs-Tk-SfT" firstAttribute="top" secondItem="dSf-kO-k2r" secondAttribute="bottom" id="eeQ-SD-qvX"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="Vm3-da-toZ" id="nB9-wI-rou"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gOD-78-565" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="cfn-I8-MDN" userLabel="Exit" sceneMemberID="exit"/>
