--- a/sprouts/Base.lproj/Main.storyboard
+++ b/sprouts/Base.lproj/Main.storyboard
@@ -34,15 +34,15 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Vm3-da-toZ">
                                 <rect key="frame" x="0.0" y="20" width="600" height="520"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hH1-eu-qx3">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="hH1-eu-qx3">
                                     <size key="itemSize" width="50" height="50"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
+                                    <inset key="sectionInset" minX="2" minY="2" maxX="2" maxY="2"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="itemCell" id="xTx-k7-QG4" customClass="ItemCell" customModule="sprouts" customModuleProvider="target">
-                                        <rect key="frame" x="10" y="10" width="200" height="200"/>
+                                        <rect key="frame" x="2" y="2" width="200" height="200"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
@@ -51,18 +51,29 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OMt-Mm-lLQ">
                                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" alpha="0.80000000000000004" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="itemName" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="BMX-4y-K0m" userLabel="itemName">
+                                                    <rect key="frame" x="10" y="169" width="79" height="21"/>
+                                                    <color key="backgroundColor" red="0.043137254899999998" green="0.043137254899999998" blue="0.043137254899999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="OMt-Mm-lLQ" secondAttribute="bottom" id="YLA-go-cvy"/>
                                             <constraint firstItem="OMt-Mm-lLQ" firstAttribute="leading" secondItem="xTx-k7-QG4" secondAttribute="leading" id="cxW-0r-jcE"/>
+                                            <constraint firstAttribute="bottom" secondItem="BMX-4y-K0m" secondAttribute="bottom" constant="10" id="fTE-zD-Cx3"/>
                                             <constraint firstItem="OMt-Mm-lLQ" firstAttribute="top" secondItem="xTx-k7-QG4" secondAttribute="top" id="fja-MR-XLA"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="BMX-4y-K0m" secondAttribute="trailing" constant="10" id="rIV-da-GfD"/>
+                                            <constraint firstItem="BMX-4y-K0m" firstAttribute="leading" secondItem="xTx-k7-QG4" secondAttribute="leading" constant="10" id="sK2-pc-lir"/>
                                             <constraint firstAttribute="trailing" secondItem="OMt-Mm-lLQ" secondAttribute="trailing" id="ubH-Hm-Vqv"/>
                                         </constraints>
                                         <size key="customSize" width="200" height="200"/>
                                         <connections>
                                             <outlet property="itemImage" destination="OMt-Mm-lLQ" id="MNn-vr-PvR"/>
+                                            <outlet property="itemNameLabel" destination="BMX-4y-K0m" id="x9o-g1-PEY"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -123,6 +134,13 @@
                                     <segue destination="tkR-mM-a9o" kind="presentation" identifier="iAteSprouts" id="7vl-HY-Jxf"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprout-drawing" translatesAutoresizingMaskIntoConstraints="NO" id="bFG-Vx-vld">
+                                <rect key="frame" x="240" y="240" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="0po-Rm-Z7Y"/>
+                                    <constraint firstAttribute="width" constant="120" id="IwN-vW-4jm"/>
+                                </constraints>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vba-Tx-y9o">
                                 <rect key="frame" x="30" y="70" width="540" height="55"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="36"/>
@@ -133,13 +151,6 @@
                                     <segue destination="616-ji-UpF" kind="presentation" identifier="iWantSprouts" id="17g-MQ-5YR"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sprout-drawing" translatesAutoresizingMaskIntoConstraints="NO" id="bFG-Vx-vld">
-                                <rect key="frame" x="240" y="240" width="120" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="0po-Rm-Z7Y"/>
-                                    <constraint firstAttribute="width" constant="120" id="IwN-vW-4jm"/>
-                                </constraints>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
